Code modification and added mouse events

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 		<meta charset="UTF-8"> 
 		
 		<link rel="stylesheet" href="./css/styles.css">
-		
-		<script src="./js/three.min.js"></script>
-		<script src="./js/main.js"></script>
+
+		<script src="./js/library/three.min.js"></script>
+		<script src="./js/library/jquery-2.1.1.min.js"></script>
+		<script src="./js/library/TrackballControls.js"></script>
+		<script src="./js/game/core/mouse.js"></script>
+		<script src="js/Game.js"></script>
 		<script src="./js/game/core/Island.js"></script>
 		<script src="./js/game/core/island/Cube.js"></script>
-		
+		<script src="js/main.js"></script>
 	</head>
 	
 	<body>
-		
+
+
 	</body>
-	
+
 </html>
